<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KaM VUT</string>
    <string name="restaurant_img">restaurant photo</string>
    <string name="account">Account info</string>
    <string name="settings">Settings</string>
    <string name="menu_err_nothing">No food on the menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_menu">Facility Menu</string>
    <string name="title_activity_account">Account</string>
    <string name="card_title">ISIC or VUT Card number</string>
    <string name="price_category_title">Show prices for</string>
    <string name="foodtype_main">Main meals</string>
    <string name="foodtype_soup">Soups</string>
    <string name="foodtype_other">Others</string>
    <string name="unit_weight">g</string>
    <string name="food_lang">Language for meals names</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_category_view">View</string>
    <string name="err_missing_card">Please fill in ISIC or VUT card number first.</string>
    <string name="err_nodata">No data</string>
    <string name="label_ok">OK</string>
    <string name="account_history">Transaction history</string>
    <string name="account_balance">Account balance:</string>
    <string name="account_balance_unknown">Unknown</string>
    <string name="btn_close">Close</string>
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_interrupt">Interrupted</string>
    <string name="restaurant_unavailable">Without current menu</string>
    <string name="restaurant_available">Current menu</string>
    <string name="err_network">Unable to retrieve data</string>
    <string name="ingredients">Ingredients</string>
    <string name="currency">CZK</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="version">Version: %s</string>
    <string name="url_github" translatable="false">https://github.com/kudlav/kam-vutbr</string>
    <string name="author">Author</string>
    <string name="copyright" translatable="false">© 2019-2020 Vladan Kudláč</string>
    <string name="contact_email" translatable="false">vladankudlac@gmail.com</string>
    <string name="privacy_title">Privacy policy</string>
    <string name="privacy_content">Card number is stored in your device and transmitted to the www.kam.vutbr.cz using unsecured connection. It can be saved to Google servers as a backup of your system. The app does not get account owner information.</string>
    <string name="favorite">Favorite</string>
    <string name="display_allergens">Displayed allergens</string>
</resources>
