<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_category_account">

        <EditTextPreference
            app:key="card_number"
            app:title="@string/card_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_category_view">

    <ListPreference
        app:defaultValue="student"
        app:entries="@array/price_entries"
        app:entryValues="@array/price_values"
        app:key="price_category"
        app:title="@string/price_category_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="cs"
        app:entries="@array/lang_entries"
        app:entryValues="@array/lang_values"
        app:key="food_lang"
        app:title="@string/food_lang"
        app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
